--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/product_want_to_buy.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/product_want_to_buy.html
@@ -9,6 +9,11 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../../css/mui.min.css">
 		<link rel="stylesheet" href="../../../css/kankan_home.css">
+		<style>
+			h5{
+				margin-left: 0.2em;
+			}
+		</style>
 	</head>
 
 	<body>
