--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/request2.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/request2.html
@@ -240,21 +240,15 @@
 				var myid=results.myid;
 				var htmlnull='<div style="text-align: center;"><p>'+TextMessage.datanull+'</p></div>';
 				var others=data.own;
-				if(others){
-					var otlength=others.length;
-				}else{
-					var otlength=0;
-				}
-				
 				if(index=="0" || index=="all"){
 					//requested
-					if(others=="" || otlength<=10 || data==""){
+					if(others=="" || others.length<=10){
 						$("#item1mobile .mui-pull-loading").html(TextMessage.nomore);
 					}
 					if(flag=="down"){
 						$("#requested").empty();
 					}
-					for(var ot=0;ot<otlength;ot++){
+					for(var ot=0;ot<others.length;ot++){
 						var transid=others[ot].trans.trans_id;
 						var comditylength=others[ot].trans.commodity.length;
 						for(var vi=0;vi<comditylength;vi++){
@@ -282,15 +276,15 @@
 						var toppx=0;
 						var oribi=realheight/realwidth;
 						var showheight=imgwidth*oribi;
-						var cha1=showheight-imgwidth;
+						var cha1=showheight-100;
 						if(cha1>0){
-							toppx=(cha1/2)*(-1);
+							toppx=cha1/2;
 						}else{
 							toppx=0;
 						}
 						var html = new Util.StringBuilder();
 						html.appendFormat('<li class="mui-table-view-cell mui-media mui-col-xs-4 translate"><a id="{0}" href="#">',transid)
-							.appendFormat('<div class="ka_imgoption" style="height:{0}px;text-align:center;"><img class="mui-media-object" src="{1}" style="height: auto;width:100%;margin-top:{2}px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>',imgwidth,comm_img=="" ? "../../../images/nopic.jpg":comm_img,toppx)
+							.appendFormat('<div class="ka_imgoption"><img class="mui-media-object" src="{0}" style="height: auto;width:100%;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>',comm_img=="" ? "../../../images/nopic.jpg":comm_img)
 							.appendFormat('<div class="mui-media-body">{0}</div>', comm_name)
 							.appendFormat('</a><div class="{0}">{1}</div>',trans_type==0 ? "kankan_jyz":"kankan_jycl",trans_typetext)
 							.appendFormat('<div class="kankan_morecoin"><img src="../../../images/morebut.png" style="width: 25px; height: 25px;display:{0};"></div>',transprocount>1 ?"":"none")
@@ -306,15 +300,10 @@
 						$("#request").empty();
 					}
 					var own=data.other;
-					if(own){
-						var owlength=own.length;
-					}else{
-						var owlength=0;
-					}
-					if(own=="" || owlength<=10 || data==""){
+					if(own=="" || own.length<=10){
 						$("#item2mobile .mui-pull-loading").html(TextMessage.nomore);
 					}
-					for(var ow=0;ow<owlength;ow++){
+					for(var ow=0;ow<own.length;ow++){
 						var otransid=own[ow].trans.trans_id;
 						var ocomditylength=own[ow].trans.commodity.length;
 						for(var wi=0;wi<ocomditylength;wi++){
@@ -351,13 +340,13 @@
 						var otoppx=0;
 						var ooribi=orealheight/orealwidth;
 						var oshowheight=imgwidth*ooribi;
-						var cha2=oshowheight-imgwidth;
+						var cha2=oshowheight-100;
 						if(cha2>0){
-							otoppx=(cha2/2)*(-1);
+							otoppx=cha2/2;
 						}
 						var html2 = new Util.StringBuilder();
 						html2.appendFormat('<li class="mui-table-view-cell mui-media mui-col-xs-4 translate"><a id="{0}" href="#">',otransid)
-							.appendFormat('<div class="ka_imgoption" style="height:{0}px;text-align:center;"><img class="mui-media-object" src="{1}" style="height: auto;width:100%;margin-top:{2}px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>',imgwidth,ocomm_img=="" ? "../../../images/nopic.jpg":ocomm_img,otoppx)
+							.appendFormat('<div class="ka_imgoption"><img class="mui-media-object" src="{0}" style="height: auto;width:100%;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>',ocomm_img=="" ? "../../../images/nopic.jpg":ocomm_img)
 							.appendFormat('<div class="mui-media-body">{0}</div>', ocomm_name)
 							.appendFormat('</a><div class="{0}">{1}</div>',otrans_type==0 ? "kankan_jyz":"kankan_jycl",otrans_typetext)
 							.appendFormat('<div class="kankan_morecoin"><img src="../../../images/morebut.png" style="width: 25px; height: 25px;display:{0};"></div>',otransprocount>1 ?"":"none")
