--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/logisticslist2.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/logisticslist2.html
@@ -270,7 +270,8 @@
 						});
 					}
 				},
-				error:function(){
+				error:function(errortypetext){
+					$("#reloadpage").html(errortypetext);
 					$("#reloadpage").show();
 				}
 			});
