--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/request.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/request.html
@@ -213,7 +213,8 @@
 								console.log(data);
 								Api.callback_ng(data);
 							},
-							error: function() {
+							error: function(errortypetext) {
+								$("#reloadpage").html(errortypetext);
 								$("#reloadpage").show();
 								$(".mui-content").hide();
 								$(".jiaoyihitext").hide();
