--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/requestlist.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/requestlist.html
@@ -15,6 +15,7 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>
 			<h1 class="mui-title lang" data-locale="requesthistory"></h1>
 		</header>
+		<div  id="reloadpage" onclick="reloadpage()" style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
 		<div class="mui-content">
 			<ul class="mui-table-view" id="historyshow">
 			</ul>
@@ -117,9 +118,10 @@
 							});
 						}
 					},
-					error:function(){
-						var nodata='<div  id="reloadpage" onclick="reloadpage()" ><font size="2" class="lang" data-locale="networkerror"></font></div>';
-						$(".mui-content").html(nodata);
+					error:function(errortypetext){
+						$("#reloadpage").html(errortypetext);
+						$("#reloadpage").show();
+						$(".mui-content").hide();
 					}
 				});
 			});
